Added drop down

--- a/www/index.html
+++ b/www/index.html
@@ -35,11 +35,20 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/metro.css">
+        <link rel="stylesheet" type="text/css" href="css/metro-helper.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Fishcart Logistics</title>
     </head>
     <body>
         <div class="container-fluid">
+            <div id="appbar-top" class="appbar appbar-top bg-black open">
+                <ul class="nav-appbar">
+                    <li><a href="#"><i class="fa fa-cart-arrow-down"></i><span class="bar-text">Trash</span></a></li>
+                    <li><a href="#"><i class="icomo-pushpin"></i>  <span class="bar-text">Pin</span></a></li>
+                    <li><a href="#"><i class="icomo-lines"></i>  <span class="bar-text">Other App</span></a></li>
+                </ul>
+            </div>
             <div class="row">
                 <div id="loading" class="col-xs-12"><i class="fa fa-refresh fa-spin"></i></div>
             </div>
